--- a/test/style.css
+++ b/test/style.css
@@ -45,7 +45,9 @@ button {
 .offButton{
     background-color: #5f6c6d;
 }
-
+.resetButton{
+    background-color: #7b61e1;
+}
 .connectButton{
     background-color: #24af37;
 }
@@ -53,6 +55,7 @@ button {
 .disconnectButton{
     background-color: #d13a30;
 }
+
 
 .gray-label {
     color: #bebebe;
