--- a/style.css
+++ b/style.css
@@ -1,36 +1,64 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
-    color: #333;
-}
-
-h1 {
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
     text-align: center;
-    margin-bottom: 20px;
 }
-
-button, input[type="checkbox"] {
-    margin: 10px;
-    padding: 10px;
-    font-size: 16px;
-}
-
-button {
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
+h1 {
+    font-size: 1.8rem;
     color: white;
-    transition: background-color 0.3s;
+}
+.topnav {
+    overflow: hidden;
+    background-color: #0A1128;
+}
+body {
+    margin: 0;
+}
+.content {
+    padding: 50px;
+}
+.card-grid {
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.card {
+    background-color: white;
+    box-shadow: 2px 2px 12px 1px rgba(140,140,140,.5);
+}
+button {
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
 }
 
-button:hover {
-    background-color: #0056b3;
+.onButton{
+    background-color: #1b8a94;
+}
+
+.offButton{
+    background-color: #5f6c6d;
+}
+
+.connectButton{
+    background-color: #24af37;
+}
+
+.disconnectButton{
+    background-color: #d13a30;
+}
+
+.gray-label {
+    color: #bebebe;
+    font-size: 1rem;
+}
+
+.reading {
+    font-size: 1.8rem;
 }
