--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ button {
 .offButton{
     background-color: #5f6c6d;
 }
+.resetButton{
+    background-color: #900cc1;
+}
 
 .connectButton{
     background-color: #24af37;
